# shorts_post_agent

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
utils/: llm.py  markdown_topic_parser.py  processed_clip.py  script_generator.py
utils/Youtube/: generate_final_video.py  generate_subtitles.py  random_background_video.py  test_auth.py  textToSpeech.py  upload_shorts.py  yt_info_generate.py
workflows/: __init__.py  shorts_workflow.py
